force-app/main/default/objects/MPA_Fifty__c/MPA_Fifty__c.object-meta.xml
<CustomObject>
    <description>Custom Object for the Spanish Business Unit</description>
    <label>MPA (Vidrala Europe)</label>
    <nameField>
        <displayFormat>MPA-{00000}</displayFormat>
        <label>MPA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPAs (Vidrala Europe)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>