force-app/main/default/objects/MPA_Fifty__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MPAs (Fifty)</relationshipLabel>
    <relationshipName>MPAs_Spain</relationshipName>
    <type>Lookup</type>
</CustomField>