force-app/main/default/objects/MPA_Fifty__c/fields/Mould_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Mould_Quantity__c</fullName>
    <label>Mould Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>