force-app/main/default/objects/MPA_Fifty__c/fields/Moulds_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Moulds_Agreement__c</fullName>
    <inlineHelpText>Who Pays For Moulds</inlineHelpText>
    <label>Moulds Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente 100% (100% Customer)</fullName>
            </value>
            <value>
                <fullName>Sobre precio modelo (In the product price)</fullName>
            </value>
            <value>
                <fullName>Sólo valor residual (Only remaining value)</fullName>
            </value>
            <value>
                <fullName>Vidrala 100%  (100% Vidrala)</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Fifty</fullName>
                <isActive>false</isActive>
                <label>Fifty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>