force-app/main/default/objects/MPA_Fifty__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aiala Vidrio</fullName>
            </value>
            <value>
                <fullName>Crisnova Vidrio</fullName>
            </value>
            <value>
                <fullName>Castellar Vidrio</fullName>
            </value>
            <value>
                <fullName>Gallo Vidrio</fullName>
            </value>
            <value>
                <fullName>Santos Barosa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>