force-app/main/default/objects/MPA_Fifty__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product associated with the MPA</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>MPAs_Spain</relationshipName>
    <type>Lookup</type>
</CustomField>