force-app/main/default/objects/MPA_Fifty__c/listViews/Fifty_Regional_Sales_Office_MPA_Fifty.listView-meta.xml
<ListView>
    <fullName>Fifty_Regional_Sales_Office_MPA_Fifty</fullName>
    <filterScope>Queue</filterScope>
    <label>Fifty Regional Sales Office</label>
    <queue>Fifty_Regional_Sales_Office</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>